navbar items added

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,21 +1,21 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-  --electricBlue: #00BFFF;
-  --deepBlue: #003366;
-  --slateBlue: #4A90E2;
-  --skyBlue: #87CEEB;
-  --neonCyan: #00FFFF;
-  --profitGreen: #00FF94;
-  --lossRed: #FF4D4D;
-  --silver: #C0C0C0;
-}
+
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
+}
+
+@theme {
+  --color-parimary : #003366;
+  --color-secondary :rgba(0, 0, 0, 0.4);
+  --color-third: #c9c9c9;
+  --color-fourth: #171719;
+}
+
+body{
+  background-color: #171717;
 }
