Top Performing Stocks section started

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
   --color-secondary :rgba(0, 0, 0, 0.4);
   --color-third: #c9c9c9;
   --color-fourth: #11819;
-  --color-fifth: #097969;
+  --color-fifth: #A4A4A4;
 }
 
 body{
